--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <title>NEW NOTIFICATION FROM A&amp;G</title>
+
+<!-- WhatsApp / Social Media Preview -->
+<meta property="og:title" content="You're Invited! 🎉" />
+<meta property="og:description" content="Adrian & Gala's Birthday · Fri Feb 27 @ 9PM · La Cave Café Paris" />
+<meta property="og:image" content="https://cwetek.com/rsvp/preview.png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:url" content="https://cwetek.com/rsvp" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter/X card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="You're Invited! 🎉" />
+<meta name="twitter:description" content="Adrian & Gala's Birthday · Fri Feb 27 @ 9PM · La Cave Café Paris" />
+<meta name="twitter:image" content="https://cwetek.com/rsvp/preview.png" />
 <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=VT323&display=swap" rel="stylesheet">
 <style>
 :root {
@@ -149,9 +164,10 @@ html, body {
 .signal-bar { width:3px; background:var(--screen-txt); border-radius:1px; opacity:0.8; transition:background 0.35s; }
 
 .sms-header {
-  font-family:'VT323',monospace; font-size:0.72rem;
-  color:var(--screen-txt); opacity:0.38;
+  font-family:'VT323',monospace; font-size:0.92rem;
+  color:var(--screen-txt); opacity:0.7;
   margin-bottom:4px; position:relative; z-index:1; flex-shrink:0;
+  text-shadow:0 0 6px currentColor;
   transition: color 0.35s;
 }
 .sms-bubble {
