--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <title>NEW NOTIFICATION FROM A&amp;G</title>
 
 <!-- WhatsApp / Social Media Preview -->
-<meta property="og:title" content="You're Invited! 🎉" />
-<meta property="og:description" content="Adrian & Gala's Birthday · Fri Feb 27 @ 9PM · La Cave Café Paris" />
+<meta property="og:title" content="You're Invited 🍸 RSVP HERE" />
+<meta property="og:description" content="Adrian & Gala's Birthday • Fri Feb 27 @9PM • La Cave Café, 75018 Paris" />
 <meta property="og:image" content="https://cwetek.com/rsvp/preview.png" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
@@ -16,10 +16,11 @@
 
 <!-- Twitter/X card -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="You're Invited! 🎉" />
-<meta name="twitter:description" content="Adrian & Gala's Birthday · Fri Feb 27 @ 9PM · La Cave Café Paris" />
+<meta name="twitter:title" content="You're Invited 🍸 RSVP HERE" />
+<meta name="twitter:description" content="Adrian & Gala's Birthday • Fri Feb 27 @9PM • La Cave Café, 75018 Paris" />
 <meta name="twitter:image" content="https://cwetek.com/rsvp/preview.png" />
 <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=VT323&display=swap" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <style>
 :root {
   --silver-hi:  #eceef1;
@@ -131,7 +132,7 @@ html, body {
 .screen {
   background:var(--screen-bg); border-radius:5px;
   padding:7px 7px;
-  height: 200px;
+  height: 230px;
   position:relative; overflow:hidden;
   display:flex; flex-direction:column;
   transition: background 0.35s ease;
@@ -171,8 +172,8 @@ html, body {
   transition: color 0.35s;
 }
 .sms-bubble {
-  font-family:'VT323',monospace; font-size:1.02rem;
-  color:var(--screen-txt); line-height:1.35;
+  font-family:'VT323',monospace; font-size:0.92rem;
+  color:var(--screen-txt); line-height:1.3;
   word-break:break-word;
   text-shadow:0 0 5px currentColor;
   position:relative; z-index:1; flex:1;
@@ -191,9 +192,9 @@ html, body {
 /* ── Screen panels ── */
 .screen-panel {
   position:relative; z-index:1;
-  margin-top:8px; padding-top:7px;
+  margin-top:auto; padding-top:5px;
   border-top:1px solid rgba(68,204,255,0.15);
-  display:none; flex-direction:column; gap:5px;
+  display:none; flex-direction:column; gap:4px;
   flex-shrink:0;
   opacity:0; transition:opacity 0.5s ease;
 }
@@ -338,7 +339,10 @@ html, body {
     <div class="screen-outer">
       <div class="screen">
         <div class="status-bar">
-          <span class="status-time" id="clock">--:--</span>
+          <div style="display:flex;align-items:center;gap:6px;">
+            <span class="status-time" id="clock">--:--</span>
+            <span class="status-time">🔊 ON</span>
+          </div>
           <div class="signal-bars">
             <div class="signal-bar" style="height:3px"></div>
             <div class="signal-bar" style="height:5px"></div>
@@ -368,10 +372,10 @@ html, body {
         <!-- Panel 3: Confirmed + calendar -->
         <div class="screen-panel" id="panel-rsvp-done">
           <div id="rsvp-confirm" style="font-family:'VT323',monospace;font-size:0.9rem;color:var(--screen-txt);text-align:center;padding:2px 0;text-shadow:0 0 8px currentColor;">
-            See you there! 🎉
+            See you there! 🪅
           </div>
           <a class="screen-btn" id="gcal-btn" href="#" target="_blank">📅 GOOGLE CALENDAR</a>
-          <a class="screen-btn" id="ical-btn" href="#" download="invite.ics">🍎 APPLE / .ICS</a>
+          <button class="screen-btn" id="save-invite-btn">📸 SAVE INVITATION</button>
         </div>
       </div>
     </div>
@@ -420,18 +424,18 @@ html, body {
 //  CONFIG
 // ═══════════════════════════════════════════════════════
 const EVENT = {
-  title:    "Adrian & Gala Birthday 🎉",
+  title:    "Adrian & Gala Birthday 🍸",
   date:     "20250227", dateEnd: "20250228",
   timeStart:"210000",   timeEnd: "010000",
-  location: "La Cave Café, Paris",
-  desc:     "You are invited! 9PM Open Mic & Piano · 10PM Open DJs (bring your USB). RSVP required."
+  location: "La Cave Café, 75018 Paris",
+  desc:     "You are invited! 9PM Open Mic & Piano · 10PM Open DJs (Bring Your USB). RSVP required."
 };
 const SMS =
-  "Hey! 🎉 You're invited to Adrian & Gala's birthday! " +
-  "Fri Feb 27 @ 9PM · La Cave Café Paris · " +
-  "Don't be late!\n\n" +
-  "9PM Open Mic and Piano\n" +
-  "10PM Open DJs (bring your USB)";
+  "Hey! 🍸 You're invited to Adrian & Gala's birthday! " +
+  "Fri Feb 27 @ 9PM · La Cave Café, 75018 Paris · " +
+  "Don't be late!" +
+  "\n\n9PM Open Mic and Piano 🎤🪗" +
+  "\n10PM Open DJs 🎧 (Bring Your USB)";
 
 // ═══════════════════════════════════════════════════════
 //  AUDIO ENGINE (original beat machine)
@@ -789,11 +793,11 @@ function typeNext() {
   if (charIdx >= SMS.length) {
     isTyping = false;
     setFullVolume();
-    // Make "La Cave Café Paris" a clickable link
+    // Make "La Cave Café Paris" a clickable link (preserve <br> tags)
     const venueURL = 'https://share.google/yPfIBfDS5GuFXCzIX';
-    smsEl.innerHTML = smsEl.textContent.replace(
-      'La Cave Café Paris',
-      `<a href="${venueURL}" target="_blank" style="color:var(--screen-txt);text-decoration:underline;text-underline-offset:2px;">La Cave Café Paris</a>`
+    smsEl.innerHTML = smsEl.innerHTML.replace(
+      'La Cave Café, 75018 Paris',
+      `<a href="${venueURL}" target="_blank" style="color:var(--screen-txt);text-decoration:underline;text-underline-offset:2px;">La Cave Café, 75018 Paris</a>`
     );
     setTimeout(() => showPanel('panel-rsvp-cta'), 400);
     return;
@@ -1038,20 +1042,6 @@ function buildCalLinks() {
     '&dates='    + EVENT.date + 'T' + EVENT.timeStart + '/' + EVENT.dateEnd + 'T' + EVENT.timeEnd +
     '&details='  + encodeURIComponent(EVENT.desc) +
     '&location=' + encodeURIComponent(EVENT.location);
-
-  const ics = [
-    'BEGIN:VCALENDAR','VERSION:2.0','PRODID:-//Birthday//EN',
-    'BEGIN:VEVENT',
-    'DTSTART:'     + EVENT.date + 'T' + EVENT.timeStart,
-    'DTEND:'       + EVENT.dateEnd + 'T' + EVENT.timeEnd,
-    'SUMMARY:'     + EVENT.title,
-    'DESCRIPTION:' + EVENT.desc,
-    'LOCATION:'    + EVENT.location,
-    'END:VEVENT','END:VCALENDAR'
-  ].join('\r\n');
-
-  const icsURL = URL.createObjectURL(new Blob([ics], {type:'text/calendar'}));
-  document.getElementById('ical-btn').href = icsURL;
 }
 
 // ═══════════════════════════════════════════════════════
@@ -1153,11 +1143,88 @@ async function submitRSVP() {
   document.querySelector('.soft-key.replay').textContent = 'REDO';
 
   buildCalLinks();
-  document.getElementById('rsvp-confirm').textContent = `See you there, ${name}! 🎉`;
+  document.getElementById('rsvp-confirm').textContent = `See you there, ${name}! 🪅`;
   showPanel('panel-rsvp-done');
 }
 
 document.getElementById('rsvp-send-btn')?.addEventListener('click', submitRSVP);
+
+// ═══════════════════════════════════════════════════════
+//  SAVE INVITATION — screenshot the phone as image
+// ═══════════════════════════════════════════════════════
+document.getElementById('save-invite-btn').addEventListener('click', async () => {
+  const btn = document.getElementById('save-invite-btn');
+  btn.textContent = '⏳ SAVING...';
+
+  // Check if html2canvas loaded
+  if (typeof html2canvas === 'undefined') {
+    btn.textContent = '❌ TRY AGAIN';
+    // Try loading it dynamically
+    const s = document.createElement('script');
+    s.src = 'https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js';
+    document.head.appendChild(s);
+    setTimeout(() => btn.textContent = '📸 SAVE INVITATION', 2000);
+    return;
+  }
+
+  try {
+    // Hide panels temporarily so just the invite text shows
+    const panels = document.querySelectorAll('.screen-panel');
+    panels.forEach(p => p.style.display = 'none');
+
+    // Hide nav row and keyboard for cleaner screenshot
+    const navRow = document.querySelector('.nav-row');
+    const kbWrap = document.querySelector('.keyboard-wrap');
+    navRow.style.display = 'none';
+    kbWrap.style.display = 'none';
+
+    // Capture the phone element
+    const phone = document.querySelector('.phone');
+    const canvas = await html2canvas(phone, {
+      backgroundColor: '#ffffff',
+      scale: 2,
+      useCORS: true,
+      logging: false
+    });
+
+    // Restore UI
+    navRow.style.display = '';
+    kbWrap.style.display = '';
+    showPanel('panel-rsvp-done');
+
+    // Try share on mobile, download on desktop
+    if (navigator.share && navigator.canShare) {
+      try {
+        const blob = await new Promise(r => canvas.toBlob(r, 'image/png'));
+        const file = new File([blob], 'invitation.png', { type: 'image/png' });
+        if (navigator.canShare({ files: [file] })) {
+          await navigator.share({ files: [file], title: 'Birthday Invitation' });
+          btn.textContent = '📸 SAVE INVITATION';
+          return;
+        }
+      } catch(e) { /* fall through to download */ }
+    }
+
+    // Desktop download
+    const link = document.createElement('a');
+    link.download = 'invitation.png';
+    link.href = canvas.toDataURL('image/png');
+    document.body.appendChild(link);
+    link.click();
+    document.body.removeChild(link);
+
+    btn.textContent = '📸 SAVED ✓';
+    setTimeout(() => btn.textContent = '📸 SAVE INVITATION', 2000);
+  } catch(e) {
+    console.error('Screenshot failed:', e);
+    btn.textContent = '❌ ERROR';
+    // Restore UI on error
+    document.querySelector('.nav-row').style.display = '';
+    document.querySelector('.keyboard-wrap').style.display = '';
+    showPanel('panel-rsvp-done');
+    setTimeout(() => btn.textContent = '📸 SAVE INVITATION', 2000);
+  }
+});
 
 </script>
 </body>
