--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ html, body {
 
         <!-- Panel 2: Name input (T9 multi-tap) -->
         <div class="screen-panel" id="panel-rsvp-form">
-          <div style="font-family:'VT323',monospace;font-size:0.72rem;color:var(--screen-txt);opacity:0.45;margin-bottom:3px;">your name:</div>
+          <div style="font-family:'VT323',monospace;font-size:0.72rem;color:var(--screen-txt);opacity:0.55;margin-bottom:3px;">press keys to type name:</div>
           <div class="t9-display" id="t9-display">
             <span id="t9-committed"></span><span id="t9-pending" class="t9-pending"></span><span class="cursor"></span>
           </div>
